--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@nestjs/swagger": "^3.1.0",
     "class-transformer": "^0.2.2",
     "class-validator": "^0.9.1",
+    "cloudinary": "^1.16.0",
     "config": "^3.1.0",
     "dotenv": "^8.0.0",
+    "fastify-file-upload": "^2.0.1",
     "fastify-rate-limit": "^2.2.0",
     "fastify-swagger": "^2.4.0",
     "moment": "^2.24.0",
