--- a/package.json
+++ b/package.json
@@ -26,16 +26,22 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-fastify": "^6.1.1",
     "@nestjs/swagger": "^3.1.0",
+    "@nestjs/typeorm": "^6.2.0",
     "class-transformer": "^0.2.2",
     "class-validator": "^0.9.1",
+    "cloudinary": "^1.16.0",
     "config": "^3.1.0",
     "dotenv": "^8.0.0",
+    "fastify-file-upload": "^2.0.1",
     "fastify-rate-limit": "^2.2.0",
     "fastify-swagger": "^2.4.0",
     "moment": "^2.24.0",
+    "pg": "^7.12.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
+    "slugify": "^1.3.5",
+    "typeorm": "^0.2.20",
     "winston": "^3.2.1"
   },
   "devDependencies": {
