--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "fastify-file-upload": "^2.0.1",
     "fastify-rate-limit": "^2.2.0",
     "fastify-swagger": "^2.4.0",
+    "google-auth-library": "^5.5.1",
+    "ioredis": "^4.14.1",
     "moment": "^2.24.0",
     "pg": "^7.12.1",
     "reflect-metadata": "^0.1.12",
@@ -47,6 +49,7 @@
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.10",
     "@nestjs/testing": "^6.0.0",
+    "@types/ioredis": "^4.0.19",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
     "@types/supertest": "^2.0.7",
