--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,7 +20,7 @@ steps:
         "--platform",
         "managed",
         "--update-env-vars",
-        "_ADMIN_KEY=ADMIN_KEY,_CLOUDINARY_CLOUD_NAME=CLOUDINARY_CLOUD_NAME,_CLOUDINARY_API_KEY=CLOUDINARY_API_KEY,_CLOUDINARY_API_SECRET=CLOUDINARY_API_SECRET,_DB_URL=DB_URL,_DB_SSL=DB_SSL,_GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID,_REDIS_URL=REDIS_URL",
+        "ADMIN_KEY=${_ADMIN_KEY},CLOUDINARY_CLOUD_NAME=${_CLOUDINARY_CLOUD_NAME},CLOUDINARY_API_KEY=${_CLOUDINARY_API_KEY},CLOUDINARY_API_SECRET=${_CLOUDINARY_API_SECRET},DB_URL=${_DB_URL},DB_SSL=${_DB_SSL},GOOGLE_CLIENT_ID=${_GOOGLE_CLIENT_ID},REDIS_URL=${_REDIS_URL}",
       ]
 images:
   - gcr.io/$PROJECT_ID/justjava-api
