--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-fastify": "^6.1.1",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.2.0",
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.2",
     "class-validator": "^0.9.1",
