--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "google-auth-library": "^5.5.1",
     "ioredis": "^4.14.1",
     "moment": "^2.24.0",
+    "node-forge": "^0.9.1",
     "pg": "^7.12.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
