Update cloudbuild env variables

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,7 +20,7 @@ steps:
         "--platform",
         "managed",
         "--update-env-vars",
-        "NODE_ENV=production,ADMIN_KEY=${_ADMIN_KEY},CLOUDINARY_CLOUD_NAME=${_CLOUDINARY_CLOUD_NAME},CLOUDINARY_API_KEY=${_CLOUDINARY_API_KEY},CLOUDINARY_API_SECRET=${_CLOUDINARY_API_SECRET},DB_URL=${_DB_URL},DB_SSL=${_DB_SSL},GOOGLE_CLIENT_ID=${_GOOGLE_CLIENT_ID},REDIS_URL=${_REDIS_URL}",
+        "NODE_ENV=production,ADMIN_KEY=${_ADMIN_KEY},CLOUDINARY_CLOUD_NAME=${_CLOUDINARY_CLOUD_NAME},CLOUDINARY_API_KEY=${_CLOUDINARY_API_KEY},CLOUDINARY_API_SECRET=${_CLOUDINARY_API_SECRET},DB_URL=${_DB_URL},DB_SSL=${_DB_SSL},GOOGLE_CLIENT_ID=${_GOOGLE_CLIENT_ID},REDIS_URL=${_REDIS_URL},RAVEPAY_ENCRYPTION_KEY=${_RAVEPAY_ENCRYPTION_KEY},RAVEPAY_PUBLIC_KEY=${_RAVEPAY_PUBLIC_KEY}",
       ]
 images:
   - gcr.io/$PROJECT_ID/justjava-api
