--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fastify-file-upload": "^2.0.1",
     "fastify-rate-limit": "^2.2.0",
     "fastify-swagger": "^2.4.0",
+    "firebase-admin": "^8.8.0",
     "google-auth-library": "^5.5.1",
     "ioredis": "^4.14.1",
     "moment": "^2.24.0",
