--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "shortid": "^2.2.15",
     "slugify": "^1.3.5",
     "typeorm": "^0.2.20",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "winston-transport": "^4.3.0"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.10",
