Use migrations instead of synchronize Run ``` CREATE TABLE migrations ( 	id serial NOT NULL, 	"timestamp" int8 NOT NULL, 	name varchar NOT NULL, 	CONSTRAINT "PK_8c82d7f526340ab734260ea46be" PRIMARY KEY (id) );
INSERT INTO public.migrations ("timestamp","name") VALUES
(1580192312721,'initial1580192312721')
;
```
on databases created before this commit to skip the initial migration.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "start:debug": "nodemon --config nodemon-debug.json",
     "prestart:prod": "rimraf dist && yarn build",
     "start:prod": "node dist/main.js",
+    "migration:generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -n",
+    "migration:create": "ts-node ./node_modules/typeorm/cli.js migration:create -n",
+    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
+    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "lint:fix": "tslint --fix -p tsconfig.json -c tslint.json",
     "test": "jest",
