--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -37,6 +37,8 @@ steps:
         SERVICE_ACCOUNT_KEY_URL=${_SERVICE_ACCOUNT_KEY_URL},
         FIREBASE_DATABASE_URL=${_FIREBASE_DATABASE_URL},
         DATADOG_API_KEY=${_DATADOG_API_KEY}",
+        MAILGUN_API_KEY=${_MAILGUN_API_KEY},
+        MAILGUN_FROM=${_MAILGUN_FROM},
       ]
 images:
   - gcr.io/$PROJECT_ID/justjava-api
