--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -36,9 +36,9 @@ steps:
         MPESA_CALLBACK_BASE=${_MPESA_CALLBACK_BASE},
         SERVICE_ACCOUNT_KEY_URL=${_SERVICE_ACCOUNT_KEY_URL},
         FIREBASE_DATABASE_URL=${_FIREBASE_DATABASE_URL},
-        DATADOG_API_KEY=${_DATADOG_API_KEY}",
+        DATADOG_API_KEY=${_DATADOG_API_KEY},
         MAILGUN_API_KEY=${_MAILGUN_API_KEY},
-        MAILGUN_FROM=${_MAILGUN_FROM},
+        MAILGUN_FROM=${_MAILGUN_FROM}",
       ]
 images:
   - gcr.io/$PROJECT_ID/justjava-api
