Remove pre-push hook

--- a/package.json
+++ b/package.json
@@ -88,8 +88,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint",
-      "pre-push": "yarn test"
+      "pre-commit": "yarn lint"
     }
   }
 }
