Migrate to eslint

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,5 +15,5 @@ jobs:
           CI: true
         run: |
           yarn install
-          yarn lint
+          yarn lint:no-fix
           # yarn test
