Use new nest-cli scripts

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "author": "Mark Njung'e",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf dist && tsc -p tsconfig.build.json",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "nodemon",
-    "start:debug": "nodemon --config nodemon-debug.json",
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
     "prestart:prod": "rimraf dist && yarn build",
-    "start:prod": "node dist/main.js",
+    "start:prod": "node dist/main",
     "migration:generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -n",
     "migration:create": "ts-node ./node_modules/typeorm/cli.js migration:create -n",
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
@@ -58,6 +59,8 @@
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.10",
+    "@nestjs/cli": "^7.1.2",
+    "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^6.0.0",
     "@types/ioredis": "^4.0.19",
     "@types/jest": "^23.3.13",
