--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "start": "nest start",
+    "start": "nest build --webpack --webpackPath webpack-hmr.config.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "prestart:prod": "rimraf dist && yarn build",
@@ -75,11 +75,13 @@
     "jest": "^23.6.0",
     "nodemon": "^1.18.9",
     "prettier": "^2.0.2",
+    "start-server-webpack-plugin": "^2.2.5",
     "supertest": "^3.4.1",
     "ts-jest": "25.2.1",
     "ts-node": "8.6.2",
     "tsconfig-paths": "3.9.0",
-    "typescript": "3.7.4"
+    "typescript": "3.7.4",
+    "webpack-node-externals": "^1.7.2"
   },
   "jest": {
     "moduleFileExtensions": [
