--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/typeorm": "^7.0.0",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
+    "bull": "^3.13.0",
     "class-transformer": "^0.2.2",
     "class-validator": "^0.9.1",
     "cloudinary": "^1.16.0",
@@ -62,6 +63,7 @@
     "@nestjs/cli": "^7.1.2",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^6.0.0",
+    "@types/bull": "^3.12.1",
     "@types/ioredis": "^4.0.19",
     "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
