--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -38,8 +38,8 @@ steps:
         FIREBASE_DATABASE_URL=${_FIREBASE_DATABASE_URL},
         DATADOG_API_KEY=${_DATADOG_API_KEY},
         MAILGUN_API_KEY=${_MAILGUN_API_KEY},
-        MAILGUN_FROM=${_MAILGUN_FROM}",
-        QUEUE_REDIS_URL=${_QUEUE_REDIS_URL}",
+        MAILGUN_FROM=${_MAILGUN_FROM},
+        QUEUE_REDIS_URL=${_QUEUE_REDIS_URL},
         QUEUE_SERVICE_NAME=${_QUEUE_SERVICE_NAME}",
       ]
 images:
