--- a/package.json
+++ b/package.json
@@ -27,62 +27,62 @@
     "docs": "npx compodoc -p tsconfig.json -s"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.5",
-    "@nestjs/core": "^7.0.5",
-    "@nestjs/platform-fastify": "^7.0.5",
-    "@nestjs/swagger": "^4.5.1",
-    "@nestjs/typeorm": "^7.0.0",
-    "axios": "^0.19.0",
+    "@nestjs/common": "^7.6.12",
+    "@nestjs/core": "^7.6.12",
+    "@nestjs/platform-fastify": "^7.6.12",
+    "@nestjs/swagger": "^4.7.13",
+    "@nestjs/typeorm": "^7.1.5",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
-    "bull": "^3.13.0",
-    "class-transformer": "^0.2.2",
-    "class-validator": "^0.9.1",
-    "cloudinary": "^1.16.0",
-    "config": "^3.1.0",
-    "dotenv": "^8.0.0",
-    "fastify-file-upload": "^2.0.1",
-    "fastify-rate-limit": "^2.2.0",
-    "fastify-swagger": "^2.5.0",
-    "firebase-admin": "^8.8.0",
-    "google-auth-library": "^5.5.1",
-    "ioredis": "^4.14.1",
-    "moment": "^2.24.0",
-    "node-forge": "^0.9.1",
-    "pg": "^7.12.1",
+    "bull": "^3.20.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "cloudinary": "^1.24.0",
+    "config": "^3.3.3",
+    "dotenv": "^8.2.0",
+    "fastify-file-upload": "^3.0.0",
+    "fastify-rate-limit": "^5.2.0",
+    "fastify-swagger": "^4.3.1",
+    "firebase-admin": "^9.5.0",
+    "google-auth-library": "^7.0.2",
+    "ioredis": "^4.22.0",
+    "moment": "^2.29.1",
+    "node-forge": "^0.10.0",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.12",
-    "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3",
-    "shortid": "^2.2.15",
-    "slugify": "^1.3.5",
-    "typeorm": "^0.2.20",
-    "winston": "^3.2.1",
-    "winston-transport": "^4.3.0"
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.3",
+    "shortid": "^2.2.16",
+    "slugify": "^1.4.6",
+    "typeorm": "^0.2.31",
+    "winston": "^3.3.3",
+    "winston-transport": "^4.4.0"
   },
   "devDependencies": {
-    "@compodoc/compodoc": "^1.1.10",
-    "@nestjs/cli": "^7.1.2",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^6.0.0",
-    "@types/bull": "^3.12.1",
-    "@types/ioredis": "^4.0.19",
-    "@types/jest": "^23.3.13",
-    "@types/node": "^10.12.18",
-    "@types/supertest": "^2.0.7",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-import": "^2.20.2",
-    "husky": "^2.2.0",
-    "jest": "^23.6.0",
-    "prettier": "^2.0.2",
+    "@compodoc/compodoc": "^1.1.11",
+    "@nestjs/cli": "^7.5.5",
+    "@nestjs/schematics": "^7.2.7",
+    "@nestjs/testing": "^7.6.12",
+    "@types/bull": "^3.15.0",
+    "@types/ioredis": "^4.19.4",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.31",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "husky": "^5.0.9",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "start-server-webpack-plugin": "^2.2.5",
-    "supertest": "^3.4.1",
-    "ts-jest": "25.2.1",
-    "ts-node": "8.6.2",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.1",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "3.9.0",
-    "typescript": "3.7.4",
-    "webpack-node-externals": "^1.7.2"
+    "typescript": "^4.1.5",
+    "webpack-node-externals": "^2.5.2"
   },
   "jest": {
     "moduleFileExtensions": [
