Replace moment with dayjs

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.13.1",
     "cloudinary": "^1.24.0",
     "config": "^3.3.3",
+    "dayjs": "^1.10.4",
     "dotenv": "^8.2.0",
     "fastify-file-upload": "^3.0.0",
     "fastify-helmet": "^5.2.0",
@@ -47,7 +48,6 @@
     "firebase-admin": "^9.5.0",
     "google-auth-library": "^7.0.2",
     "ioredis": "^4.22.0",
-    "moment": "^2.29.1",
     "node-forge": "^0.10.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.12",
