--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "start": "nest build --webpack --webpackPath webpack-hmr.config.js",
+    "start": "nest start --watch",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "prestart:prod": "rimraf dist && yarn build",
@@ -77,13 +77,11 @@
     "husky": "^5.0.9",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "start-server-webpack-plugin": "^2.2.5",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "3.9.0",
-    "typescript": "^4.1.5",
-    "webpack-node-externals": "^2.5.2"
+    "typescript": "^4.1.5"
   },
   "jest": {
     "moduleFileExtensions": [
