--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "fastify-rate-limit": "^5.2.0",
     "fastify-swagger": "^4.3.1",
     "firebase-admin": "^9.5.0",
+    "flat": "^5.0.2",
     "google-auth-library": "^7.0.2",
     "ioredis": "^4.22.0",
     "node-forge": "^0.10.0",
@@ -65,6 +66,7 @@
     "@nestjs/schematics": "^7.2.7",
     "@nestjs/testing": "^7.6.12",
     "@types/bull": "^3.15.0",
+    "@types/flat": "^5.0.1",
     "@types/ioredis": "^4.19.4",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
