--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "migration:create": "ts-node ./node_modules/typeorm/cli.js migration:create -n",
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
     "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "lint:no-fix": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -62,6 +61,7 @@
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
+    "@marknjunge/eslint-config": "^1.6.0",
     "@nestjs/cli": "^7.5.5",
     "@nestjs/schematics": "^7.2.7",
     "@nestjs/testing": "^7.6.12",
@@ -74,11 +74,9 @@
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "eslint": "^7.20.0",
-    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "husky": "^5.0.9",
     "jest": "^26.6.3",
-    "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
