--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,11 +9,11 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: "12.14.1"
+          node-version: "14.15.3"
       - name: lint and test
         env:
           CI: true
         run: |
           yarn install
-          yarn lint:no-fix
+          yarn lint
           # yarn test
