--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -15,8 +15,8 @@ jobs:
       - name: pre-deploy actions
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/id_rsa
+          echo "${{ secrets.DEV_SSH_PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H '${{ secrets.HOST }}' >> ~/.ssh/known_hosts
+          ssh-keyscan -H '${{ secrets.DEV_DEPLOY_HOST }}' >> ~/.ssh/known_hosts
       - name: Deploy
-        run: git push dokku@${{ secrets.HOST }}:dev-justjava develop:master
+        run: git push dokku@${{ secrets.DEV_DEPLOY_HOST }}:${{ secrets.DEV_APP_NAME }} develop:master
