Change images upload to Google Cloud

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "docs": "npx compodoc -p tsconfig.json -s"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.8.5",
     "@nestjs/common": "^7.6.12",
     "@nestjs/core": "^7.6.12",
     "@nestjs/platform-fastify": "^7.6.12",
@@ -36,14 +37,14 @@
     "bull": "^3.20.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "cloudinary": "^1.24.0",
     "config": "^3.3.3",
     "dayjs": "^1.10.4",
     "dotenv": "^8.2.0",
-    "fastify-file-upload": "^3.0.0",
     "fastify-helmet": "^5.2.0",
+    "fastify-multipart": "^4.0.5",
     "fastify-rate-limit": "^5.2.0",
     "fastify-swagger": "^4.3.1",
+    "filesize": "^6.3.0",
     "firebase-admin": "^9.5.0",
     "flat": "^5.0.2",
     "google-auth-library": "^7.0.2",
